# duo-multimedia-examples

./: .gitignore  README-zh.md  README.md
cmake/: musl_riscv64.cmake
common_utils/: CMakeLists.txt  log.cpp  log.h  util.cpp  util.h
video_player_fb/: CMakeLists.txt  build_riscv64.sh
video_player_fb/src/: app_service.cpp  app_service.h  fb_display.cpp  fb_display.h  media_player.cpp  media_player.h  video_decoder.cpp  video_decoder.h
video_player_vo/: CMakeLists.txt
video_player_vo/src/: app_service.cpp  app_service.h  cvi_vdec_vo.cpp  cvi_vdec_vo.h  media_player.cpp  media_player.h  video_decoder.cpp  video_decoder.h
video_recorder/: CMakeLists.txt  main.cpp
video_recorder/src/: app_service.cpp  app_service.h  cvi_sdk.cpp  cvi_sdk.h  defines.h  video_record.cpp  video_record.h
